apps/collabora/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora
  namespace: collabora
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`office.ryandev.ru`)
      kind: Rule
      services:
        - name: collabora
          port: 9980
  tls:
    secretName: office-ryandev-ru-tls
